assets/styles/main.css
html, body {
    margin: 0;
    height: 100%;
}

a {
    color: #e00;
    font-style: italic;
}

.page-enter-active,
.page-leave-active {
  transition: opacity 0.25s;
}
.page-enter,
.page-leave-to {
  opacity: 0;
}

#headercontainer {
    position: fixed;
    height: 100%;
    width: 300px;
    border-right: 17px solid transparent;
    border-image: url(~assets/images/halftone.png) 17 repeat;
    z-index: 2;
}

#header {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    background: #111;
}

#header div {
    margin-left: auto;
    margin-right: auto;
}

#headericons img:hover {
    transform: scale(1.5);
}

#headericons img {
    transition: all 300ms;
}

#contentcontainer {
    display: block;
    position: absolute;
    left: 300px;
    right: 0;
    background: #1d1d1d;
    color: white;
    font-size: 2em;
    min-height: 101vh;
}

#indexcontentpadding {
    width: auto;
    margin: 20px;
    padding-bottom: 20px;
}

#indexcontent {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(200px, auto));
    grid-gap: 10px;
    grid-auto-rows: minmax(200px, auto);
    grid-auto-flow: dense;
}

.post a img {
    width: 100%;
    height: 100%;
}

.featured {
    grid-column: span 2;
    grid-row: span 2;
}

.post a {
    display: block;
    text-decoration: none;
    color: white;
    height: 100%;
    width: 100%;
}

.post:hover {
    transform: scale(1.05);
    z-index: 1;
}

.post {
    transition: all 1s;
    z-index: unset;
}

/* 1024 wide */
@media only screen and (max-width: 1024px) {
    #headercontainer {
        position: fixed;
        width: 100vw;
        height: 40px;
        border-right: none;
        border-bottom: 17px solid transparent;
        border-image: url(~assets/images/halftone.png) 17 repeat;
        z-index: 2;
    }

    #contentcontainer {
        left: 0;
        right: 0;
        top: 40px;
    }

    #header #logo {
        margin: 0;
        padding: 0;
    }
        
    #header #headericons {
        margin: 0;
        padding: 4px;
    }

    #logolink {
        display: block;
        width: 75px;
        height: 40px;
        background: url(~assets/images/hellcat-crop.svg);
        background-repeat: no-repeat;
        background-size: auto 40px;
    }

    #logoimg {
        display: none;
    }

    #header {
        flex-direction: row;
        justify-content: space-between;
    }
}

/* 480 wide */
@media only screen and (max-width: 480px) {
    #indexcontent {
        grid-template-columns: auto auto;
        grid-auto-rows: auto;
    }
}

